<resources>
    <string name="app_name">Lens</string>

    <string name="map">Map</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="profile">Profile</string>
    <string name="post">Create</string>

    <string name="edit_message">Email</string>
    <string name="news_feed">News feed view</string>
    <string name="button_send">Sign up</string>
    <string name="map_view">Map View</string>
    <string name="user_profile">User profile</string>
    <string name="create_post">Create post</string>
    <string name="display_post">Display post</string>
    <string name="open_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="google_maps_key">AIzaSyDsSnbEKYUrxxht13XLL-tKBQnx93KfRqw</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>

    <string name="return_button">Return Button</string>
    <string name="shrooms">Shrooms</string>
    <string name="sample_author">By John Anec</string>
    <string name="sample_location">London, UK</string>
    <string name="sample_title">A Motherfucking Shroom</string>
    <string name="sample_time">1 min ago</string>
    <string name="sample_description">Have shrooms everyday motherfuckers. </string>
    <string name="sample_text">blahblahblah</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
