<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_create_post"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    tools:context="com.shroomworks.myapplication.CreatePostActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_feed"
            android:onClick="openNewsFeed" />
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_view"
            android:onClick="openMap" />
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile"
            android:onClick="openUserProfile" />
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_post"
            android:onClick="openCreatePost" />
    </LinearLayout>

    <Button
        android:text="Take a picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="takePicture" />

    <ImageView
        android:id="@+id/shroomThumb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/shroom"/>

    <Button
        android:text="Post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="postPicture" />
</LinearLayout>
