<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_full_screen_post"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shroomworks.myapplication.FullScreenPostActivity">

    <LinearLayout
        android:id="@+id/fullpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/imagelayout"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:contentDescription="@string/shrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/restaurant"/>

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <ImageButton
                    android:id="@+id/backbutton"
                    android:contentDescription="@string/return_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:tint="@color/white"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_arrow_back_black_24dp"
                    />

                <LinearLayout
                    android:id="@+id/authorlocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        style="@style/WhiteTextDarkShadow"
                        android:text="@string/sample_author"
                        />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        style="@style/WhiteTextDarkShadow"
                        android:text="@string/sample_location"
                        />
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_alignParentBottom="true">

                <RelativeLayout
                    android:id="@+id/titletime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/titleLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        style="@style/WhiteTextDarkShadow"
                        android:text="@string/sample_title"/>

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:textSize="13sp"
                        style="@style/WhiteTextDarkShadow"
                        android:text="@string/sample_time"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:textSize="15sp"
                    style="@style/WhiteTextDarkShadow"
                    android:text="@string/sample_description"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="1">


        </LinearLayout>

    </LinearLayout>


    



</ScrollView>
